[package]
name = "morse-codec"
version = "0.4.2"
edition = "2024"
authors = ["Barış Ürüm"]
license = "MIT"
repository = "https://github.com/burumdev/morse-codec"
description = "Library for live decoding and encoding of morse code messages. Supports multiple embedded devices and operating systems by being no_std."
keywords = ["morse", "encoder", "decoder", "no_std", "embedded"]
categories = ["embedded", "no-std::no-alloc", "encoding", "text-processing", "accessibility"]

[features]
default = ["decoder", "encoder"]
decoder = []
encoder = []
utf8 = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[profile.dev]
lto = true
opt-level = "s"

[dev-dependencies]
keyboard_query = "0.1.0"
